--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/racoon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brylle's Portfolio</title>
+    <title>Marius Brylle Pastoral</title>
   </head>
   <body>
     <div id="root"></div>
