Fixed icon path

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" id="html_element" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/racoon.png" />
+    <link rel="icon" href="./src/assets/racoon1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marius Brylle Pastoral</title>
   </head>
