--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en" id="html_element" data-theme="light">
+<html lang="en" id="html_element" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/racoon1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marius Brylle Pastoral</title>
   </head>
-  <body class="dark:bg-neutral-900">
-    <div id="root"></div>
+  <body class="dark:bg-neutral-950">
+    <div id="root" class="mt-14"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
