Changed font and theme

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" id="html_element" data-theme="dark">
+<html lang="en" id="html_element" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/racoon1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marius Brylle Pastoral</title>
   </head>
-  <body class="dark:bg-neutral-950">
+  <body class="dark:bg-neutral-950 font-roboto">
     <div id="root" class="mt-14"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
